fix overflow on smaller width displays

--- a/web/src/style/main.scss
+++ b/web/src/style/main.scss
@@ -44,7 +44,7 @@ body {
 
 .view-content {
 	// center page content on screen
-	width: 1400px;
+	width: min(80em, 100vw);
 	margin: auto;
 
 	// fill screen
